Started creating website. Working on Past Masters

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 </style>
 
 <head>
-	<title>My Bathroom</title>
+	<title>Eastmuir Masonic Lodge Official Site</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -164,7 +164,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html">My Bathroom</a></h1>
+			<h1><a href="index.html">Lodge Eastmuir No.1126</a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
@@ -172,9 +172,12 @@
 						<div id="menu">
 							<ul>
 								<li><a href="#banner" class="scrolly">Home</a></li>
-								<li><a href="#about" class="scrolly">What We Do</a></li>
+								<li><a href="#rwm" class="scrolly">Right Worshipful Master</a></li>
+								<li><a href="#officeBearers" class="scrolly">Office Bearers</a></li>
+								<li><a href="#syllabus" class="scrolly">Syllabus</a></li>
 								<li><a href="#contact" class="scrolly">Get In Touch</a></li>
 								<li><a href="#social" class="scrolly">Social</a></li>
+								<li><a href="PastMasters.html">Past Masters</a></li>
 							</ul>
 						</div>
 					</li>
@@ -185,35 +188,248 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<h2>My Bathroom</h2>
-				<p>Planning a bathroom upgrade?<br />
-					We'd love to help!<br />
+				<h2>Lodge Eastmuir No.1126</h2>
+				<p>On the roll of the Grand Lodge of Scotland</p>
+				<p>All Brethren in Good Standing are welcome to join us at our regular meetings.<br />
 				</p>
 				<ul class="actions special">
 					<li><a href="#contact" class="button primary scrolly">Get in touch</a></li>
 				</ul>
 			</div>
-			<a href="#about" class="more scrolly">Learn More</a>
+			<a href="#rwm" class="more scrolly">More</a>
 		</section>
 
-		<!-- About -->
-		<section id="about" class="wrapper style1 special">
-			<div class="inner">
-				<header class="major">
-					<h3>MyBathroom is a partnership run company. We are trusted tradesmen, with over 15 years experience in the
-						bathroom
-						industry. It gives our customers all the peace of mind, knowing its been carried out correctly, in a
-						professional manner and most importantly on time. Throughout the process of the survey, designing and
-						installation is delivered to the highest standard. We use high quality products so we can deliver the
-						bathroom of your dreams. Our services are second to none. We always believe that customers should trust a
-						tradesman not a salesman.</h3>
-					<p>Take a look at some of the services that we can provide.</p>
-				</header>
-			</div>
+		<!-- One -->
+		<section id="one" class="wrapper alt style2">
+			<!-- Right Worshipful Master -->
+			<section id="rwm" class="spotlight">
+				<div class="image"><img src="images/RWM.jpg" alt="" /></div>
+				<div class="content">
+					<h2>Right Worshipful Master</h2>
+					<p>As the Right Worshipful Master I would like to take this opportunity to welcome and thank you for 
+						taking time to visit the Lodge Eastmuir website. At Lodge Eastmuir we are extremely proud of our 
+						lodge and we hope that the website reflects this by providing our visitors with an insight into all events in the Lodge.
+					</p>
+					<p>Our lodge is based in the Shettleston area of Glasgow and we meet on the first and third Thursdays from September through 
+						to May. Whether you are a regular visitor or would be visiting for the first time, I can assure every bother in good 
+						standing of a very warm and friendly welcome into our lodge. We have received visitors from all over the globe and we 
+						always look forward to meeting visiting brethren.
+					</p>
+					<p>
+						Thank you once again for taking the time to visit our website. I hope you find it instructive and helpful. If you would 
+						like to contact us or are interested in finding out more about freemasonry in general, please feel free to contact our 
+						webmaster from the ‘Contact Us’ page, or our Lodge Secretary Frank Richmond.
+					</p>
+					<p>David Jones</p>
+					<p>Right Worshipful Master</p>
+					<p>17th December 2023</p>
+				</div>
+			</section>
+			<!-- Office Bearers -->
+			 <section id="officeBearers" class="spotlight">
+				<div class="image"><img src="images/Banner.jpg" alt="" /></div>
+				<div class="content">
+					<h2>Office Bearers 2023-2024</h2>
+					<table>
+						<tr>
+							<td>RWM</td>
+							<td>David Jones</td>
+						</tr>
+						<tr>
+							<td>IPM</td>
+							<td>Stuart McManus</td>
+						</tr>
+						<tr>
+							<td>DM</td>
+							<td>Charles Coobes PM</td>
+						</tr>
+						<tr>
+							<td>SM</td>
+							<td>David Wheatley PM</td>
+						</tr>
+						<tr>
+							<td>WSW</td>
+							<td>Robert Barr PM</td>
+						</tr>
+						<tr>
+							<td>WJW</td>
+							<td>Ian Haldane PM</td>
+						</tr>
+						<tr>
+							<td>SEC</td>
+							<td>Frank Richmond PM</td>
+						</tr>
+						<tr>
+							<td>TRE</td>
+							<td>James Clifford PM</td>
+						</tr>
+						<tr>
+							<td>BFT</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>ALM</td>
+							<td>Geo. B'bridge</td>
+						</tr>
+						<tr>
+							<td>SD</td>
+							<td>Fraser Galloway</td>
+						</tr>
+						<tr>
+							<td>JD</td>
+							<td>Ian Young</td>
+						</tr>
+						<tr>
+							<td>IG</td>
+							<td>Robert Sherrard</td>
+						</tr>
+						<tr>
+							<td>DOC</td>
+							<td>Edward Woods PM</td>
+						</tr>
+						<tr>
+							<td>CHAP</td>
+							<td>Gary Faulds</td>
+						</tr>
+						<tr>
+							<td>JEW</td>
+							<td>James Milliken</td>
+						</tr>
+						<tr>
+							<td>ARC</td>
+							<td>Greg O'Lone</td>
+						</tr>
+						<tr>
+							<td>BB</td>
+							<td>Alan Taylor</td>
+						</tr>
+						<tr>
+							<td>SB</td>
+							<td>Alistair Hamilton</td>
+						</tr>
+						<tr>
+							<td>MAR</td>
+							<td>Jamie Gray</td>
+						</tr>
+						<tr>
+							<td>STEW</td>
+							<td>Finlay Milliken</td>
+						</tr>
+						<tr>
+							<td>TYL</td>
+							<td>John Whiteside</td>
+						</tr>
+					</table>
+				</div>
+			 </section>
+			<!-- Syllabus -->
+				<section id="syllabus" class="spotlight">
+				<div class="image"><img src="images/Logo.png" alt="" /></div>
+				<div class="content">
+					<h2>Meetings 2024</h2>
+					<table>
+						<tr>
+							<td>Jan 18th</td>
+							<td>1st Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>Feb 1st</td>
+							<td>2nd Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>Feb 15th</td>
+							<td>3rd Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>Feb 29th</td>
+							<td>1st Degree</td>
+							<td>Robert Burns</td>
+						</tr>
+						<tr>
+							<td>Mar 7th</td>
+							<td>Provincial Visit</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Mar 21st</td>
+							<td>2nd Degree</td>
+							<td>Langside</td>
+						</tr>
+						<tr>
+							<td>Apr 4th</td>
+							<td>3rd Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>Apr 18th</td>
+							<td>1st Degree</td>
+							<td>Cale Rway</td>
+						</tr>
+						<tr>
+							<td>May 2nd</td>
+							<td>2nd Degree</td>
+							<td>Ballater</td>
+						</tr>
+						<tr>
+							<td>May 16th</td>
+							<td>3rd Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>May 30th</td>
+							<td>1st Degree</td>
+							<td>Possilpark</td>
+						</tr>
+						<tr>
+							<td>Sep 5th</td>
+							<td>2nd Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>Sep 19th</td>
+							<td>3rd Degree</td>
+							<td>Eastmuir</td>
+						</tr>
+						<tr>
+							<td>Oct 3rd</td>
+							<td>1st Degree</td>
+							<td>Easterhouse</td>
+						</tr>
+						<tr>
+							<td>Oct 17th</td>
+							<td>2nd Degree</td>
+							<td>St Andrew Glw - Withdrawn</td>
+						</tr>
+						<tr>
+							<td>Nov 7th</td>
+							<td>Elections</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Nov 21st</td>
+							<td>Mark Cerm</td>
+							<td>Scotia</td>
+						</tr>
+						<tr>
+							<td>Dec 5th</td>
+							<td>AGM</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Dec 20th</td>
+							<td>Installation</td>
+							<td></td>
+						</tr>
+					</table>
+				</div>
+				</section>
 		</section>
 
 		<!-- Two -->
-		<section id="two" class="wrapper alt style2">
+		<!--<section id="test" class="wrapper alt style2">
 			<section class="spotlight">
 				<div class="image"><img src="images/services/Supply_design.jpg" alt="" /></div>
 				<div class="content">
@@ -242,7 +458,7 @@
 					<p>We also cover all trades, so we can cover kitchen installations, boiler and heating systems to full tiles services and electrical work</p>
 				</div>
 			</section>
-		</section>
+		</section> -->
 
 		<!-- contact -->
 		<section id="contact" class="wrapper style3 special">
@@ -277,7 +493,7 @@
 				<li><a href="https://www.instagram.com/srichmond89/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; MyBathroom</li>
+				<li>&copy; Eastmuir Masonic Lodge</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</footer>
