Added more screens

--- a/PastMasters.html
+++ b/PastMasters.html
@@ -185,22 +185,196 @@
 			</nav>
 		</header>
 
-		<!-- One -->
-		<section id="one" class="wrapper alt style2">
-			<!-- Past Masters -->
-			<section id="pastMasters" class="spotlight">				
-				<div class="content">
-					<h2>Past Masters</h2>
-					<table>
-						<tr>
-							<td>Stephen Richmond 2024-2025</td>
-						</tr>
-						<tr>
-							<td>Frank Richmond 2020-2021</td>
-						</tr>
-					</table>
-				</div>
-			</section>
+		<!-- Past Masters -->
+		<section id="pastMasters" class="wrapper style2">			
+			<div class="content">
+				<h2 style="padding-left: 10px;">Past Masters</h2>
+				<table>
+					<tr>
+						<td>
+							<img src="images/PastMasters/DavidJones.jpg" alt="" />
+							<br/>David Jones<br/>2023-24
+						</td>
+						<td>
+							<img src="images/PastMasters/StewartMcManus.jpg" alt="" />
+							<br/>Stewart McManus<br/>2022-23
+						</td>
+						<td>
+							<img src="images/PastMasters/DavidWheatley.jpg" alt="" />
+							<br/>David Wheatley<br/>2019-22
+						</td>
+						<td>
+							<img src="images/PastMasters/IanHaldane.jpg" alt="" />
+							<br/>Ian Haldane<br/>2018-19
+						</td>
+						<td>
+							<img src="images/PastMasters/ThomasWoods.jpg" alt="" />
+							<br/>Thomas Woods<br/>2017-18
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<img src="images/PastMasters/EdwardWoods.jpg" alt="" />
+							<br/>Edward Woods<br/>2016-17
+						</td>
+						<td>
+							<img src="images/PastMasters/IanHaldane.jpg" alt="" />
+							<br/>Ian Haldane<br/>2015-16
+						</td>
+						<td>
+							<img src="images/PastMasters/CharlesHendry.jpg" alt="" />
+							<br/>Charles Hendry<br/>2014-15
+						</td>
+						<td>
+							<img src="images/PastMasters/AlanMurphy.jpg" alt="" />
+							<br/>Alarn Murphy<br/>2012-14
+						</td>
+						<td>
+							<img src="images/PastMasters/RichardMilliken.jpg" alt="" />
+							<br/>Richard Milliken<br/>2011-12
+						</td>						
+					</tr>
+					<tr>
+						<td>
+							<img src="images/PastMasters/DavidKelly.jpg" alt="" />
+							<br/>David Kelly<br/>2009-11
+						</td>
+						<td>
+							<img src="images/PastMasters/FrankRichmond.jpg" alt="" />
+							<br/>Frank Richmond<br/>2007-09
+						</td>
+						<td>
+							<img src="images/PastMasters/JimClifford.jpg" alt="" />
+							<br/>Jim Clifford<br/>2005-07
+						</td>
+						<td>
+							<img src="images/PastMasters/RobertBarr.jpg" alt="" />
+							<br/>Robert Barr<br/>2004-05
+						</td>						<td>
+							<img src="images/PastMasters/CharlesArchibald.jpg" alt="" />
+							<br/>Charles Archibald<br/>2003-04
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div style="text-align: center;">
+								<img style="vertical-align: top;" src="images/PastMasters/JohnAdam.jpg" alt="" />							
+								<br/>Our first Right Worshipful Master
+								<br/>John Adam
+								<br/>1914
+							</div>
+						</td>
+						<td>
+							2017-2018 T Woods<br/>
+							2016-2017 E Woods<br/>
+							2015-2016 I Haldane<br/>
+							2014-2015 C Hendry<br/>
+							2013-2014 A Murphy<br/>
+							2012-2013 A Murphy<br/>
+							2011-2012 R Milliken<br/>
+							2010-2011 D Kelly<br/>
+							2009-2010 F Richmond<br/>
+							2008-2009 F Richmond<br/>
+							2007-2008 J Clifford<br/>
+							2006-2007 J Clifford<br/>
+							2005-2006 R Barr<br/>
+							2004-2005 C Archibald<br/>
+							2003-2004 S Laurie<br/>
+							2002-2003 J King SNR<br/>
+							2001-2002 J King JNR<br/>
+							2000-2001 D Kelly<br/>
+							1999-2000 A Murphy<br/>
+							1998-1999 D Bambridge<br/>
+							1997-1998 R Carss<br/>
+							1996-1997 G McLean<br/>
+							1995-1996 F Carss<br/>
+							1994-1995 J Smith<br/>
+							1993-1994 D Turner<br/>
+							1992-1993 J Low<br/>
+							1991-1992 A Murphy<br/>
+							1990-1991 D Bambridge<br/>
+							1989-1990 T Corbett<br/>
+							1988-1989 C Archibald<br/>
+							1987-1988 J McCann<br/>
+							1986-1987 T Young<br/>
+							1985-1986 E Fitzsimmons<br/>
+							1984-1985 J McNamara<br/>
+							1983-1984 W Cassidy<br/>
+							1982-1983 W Cassidy<br/>
+							1981-1982 M Rowson<br/>
+							1980-1981 I Monteague<br/>
+							1979-1980 R Dalrymple<br/>
+							1978-1979 A McManus<br/>
+							1977-1978 D Park<br/>
+							1976-1977 G Reid<br/>
+							1975-1976 A Chalmers<br/>
+							1974-1975 S Crosbie<br/>
+							1973-1974 L Connell<br/>
+							1972-1973 R Ramsay<br/>
+							1971-1972 R McLachlan<br/>
+							1970-1971 N Anderson<br/>
+							1969-1970 W White<br/>
+							1968-1969 R Dalrymple<br/>
+							1967-1968 W Sommerville<br/>
+							1966-1967 W McCaffery<br/>
+						</td>
+						<td>
+							1965-1966 J Kerr<br/>
+							1964-1965 R McIntosh<br/>
+							1963-1964 J McCann<br/>
+							1962-1963 A Beattie<br/>
+							1961-1962 J McIntosh<br/>
+							1960-1961 W Wishart<br/>
+							1959-1960 J McDermid<br/>
+							1958-1959 J McCafferty<br/>
+							1957-1958 R Ingram<br/>
+							1956-1957 E Rodger<br/>
+							1955-1956 J McCann<br/>
+							1954-1955 R McIntosh<br/>
+							1953-1954 W Hannah<br/>
+							1952-1953 J Campbell<br/>
+							1951-1952 J Lawson<br/>
+							1950-1951 P Park<br/>
+							1949-1950 B Milne<br/>
+							1948-1949 M McLean<br/>
+							1947-1948 T McWhinnie<br/>
+							1946-1947 W Young<br/>
+							1945-1946 A Marshall<br/>
+							1944-1945 J Maxwell<br/>
+							1943-1944 T Wilkie<br/>
+							1942-1943 D Dunwoodie<br/>
+							1941-1942 W Berry<br/>
+							1940-1941 J Hastings<br/>
+							1939-1940 J Stein<br/>
+							1938-1939 B Berry<br/>
+							1937-1938 A Forbes<br/>
+							1936-1937 W Herd<br/>
+							1935-1936 J Christie<br/>
+							1934-1935 J Richards<br/>
+							1933-1934 J Dunlop<br/>
+							1932-1933 W Watson<br/>
+							1931-1932 J Douglas<br/>
+							1930-1931 J Grassom<br/>
+							1929-1930 J Graham JNR<br/>
+							1928-1929 W Jackson<br/>
+							1927-1928 J Campbell<br/>
+							1926-1927 W Geddes<br/>
+							1925-1926 F Brooks<br/>
+							1924-1925 G Henderson<br/>
+							1923-1924 C Wright<br/>
+							1922-1923 Rev J Barrowman<br/>
+							1921-1922 D Ritchie<br/>
+							1920-1921 G Swan<br/>
+							1919-1920 E J Richards<br/>
+							1918-1919 D Maxwell<br/>
+							1917-1918 R Swails<br/>
+							1916-1917 W Thorley<br/>
+							1915-1916 J Adam<br/>
+							1914-1915 J Adam<br/>
+						</td>
+					</tr>
+				</table>
+			</div>
 		</section>
 
 		<!-- Footer -->
