--- a/index.html
+++ b/index.html
@@ -175,9 +175,14 @@
 								<li><a href="#rwm" class="scrolly">Right Worshipful Master</a></li>
 								<li><a href="#officeBearers" class="scrolly">Office Bearers</a></li>
 								<li><a href="#syllabus" class="scrolly">Syllabus</a></li>
-								<li><a href="#contact" class="scrolly">Get In Touch</a></li>
-								<li><a href="#social" class="scrolly">Social</a></li>
+								<li><a href="#visitations" class="scrolly">Visitations</a></li>
 								<li><a href="PastMasters.html">Past Masters</a></li>
+								<li><a href="History.html">History</a>
+									<ul style="padding-left: 20px;">
+										<li><a href="CommemorativeClock.html">Commemorative Clock</a></li>
+										<li><a href="EdwardJohnRichards.html">Edward John Richards</a></li>
+									</ul>
+								</li>
 							</ul>
 						</div>
 					</li>
@@ -323,7 +328,7 @@
 				</div>
 			 </section>
 			<!-- Syllabus -->
-				<section id="syllabus" class="spotlight">
+			<section id="syllabus" class="spotlight">
 				<div class="image"><img src="images/Logo.png" alt="" /></div>
 				<div class="content">
 					<h2>Meetings 2024</h2>
@@ -425,40 +430,63 @@
 						</tr>
 					</table>
 				</div>
-				</section>
+			</section>
+			<!-- Visitations -->
+			<section id="visitations" class="wrapper style2">
+				<div class="content">
+					<h2 style="text-align: center;">Deputations to Other Lodges</h2>
+					<table style="text-align: center;">
+						<tr>
+							<td colspan="2"><strong>2025</strong></td>
+						</tr>
+						<tr>
+							<td>Lodge Scotia</td>
+							<td>EA Degree on Tuesday 14th Jan</td>
+						</tr>
+						<tr>
+							<td>Lodge Ballater</td>
+							<td>MM Degree on Tuesday  21st Jan</td>
+						</tr>
+						<tr>
+							<td>Lodge St George</td>
+							<td>FC Degree on Wednesdy 12th Feb</td>
+						</tr>
+						<tr>
+							<td>Lodge Robert Burns</td>
+							<td>EA Degree on Thursday 11th Sept</td>
+						</tr>
+						<tr>
+							<td colspan="2"><strong>2024</strong></td>
+						</tr>
+						<tr>
+							<td>Lodge Scotia</td>
+							<td>EA Degree on Tuesday 9th Jan</td>
+						</tr>
+						<tr>
+							<td>Lodge Ballater</td>
+							<td>FC Degree on Tuesday 16th Jan​</td>
+						</tr>
+						<tr>
+							<td>Lodge Easterhouse</td>
+							<td>EA Degree on Monday 12th Feb​</td>
+						</tr>
+						<tr>
+							<td>Cale Rway Lodge</td>
+							<td>EA Degree on Friday 3rd May</td>
+						</tr>
+						<tr>
+							<td>Lodge St Bryde</td>
+							<td>EA Degree on Wednesday 11th September</td>
+						</tr>
+						<tr>
+							<td>Lodge Robert Burns</td>
+							<td>FC Degree on Thursday 12th September</td>
+						</tr>
+					</table>
+				</div>
+			</section>
 		</section>
 
-		<!-- Two -->
-		<!--<section id="test" class="wrapper alt style2">
-			<section class="spotlight">
-				<div class="image"><img src="images/services/Supply_design.jpg" alt="" /></div>
-				<div class="content">
-					<h2>Supply & design</h2>
-					<p>As a supply service we aim to deliver your desired bathroom, we design to suit our customers needs and with our skills to deliver that dream bathroom</p>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image"><img src="images/services/Wetroom.jpg" alt="" /></div>
-				<div class="content">
-					<h2>Wet room installation</h2>
-					<p>We specialise in designing and installation of wet rooms with full waterproofing as standard</p>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image"><img src="images/services/Wetwall.jpg" alt="" /></div>
-				<div class="content">
-					<h2>Wetwall installation</h2>
-					<p>We also give our customers the added option of wetwall installations to give your bathroom an ultra sleek finish</p>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image"><img src="images/services/All_trades.jpg" alt="" /></div>
-				<div class="content">
-					<h2>All Trades</h2>
-					<p>We also cover all trades, so we can cover kitchen installations, boiler and heating systems to full tiles services and electrical work</p>
-				</div>
-			</section>
-		</section> -->
 
 		<!-- contact -->
 		<section id="contact" class="wrapper style3 special">
