Added EJR screen and slideshow test

--- a/EdwardJohnRichards.html
+++ b/EdwardJohnRichards.html
@@ -189,45 +189,67 @@
 		<section id="edwardJohnRichards" class="wrapper style2">			
 			<div class="content" style="padding-left: 10px;">
 				<h2>Edward John Richards JNR</h2>
-                <img src="images/Clock1.jpg" style="float: left; padding-right: 10px; padding-bottom: 10px;"/>
-                <p>
-                    <strong>Presentation of the Clock on Thursday 4th May 2023.</strong>
-                </p>
 				<p>
-					From Left to Right:-RWM Alex Hamilton Lodge St Bryde No.579, RWM Stuart McManus Lodge Eastmuir No.1126, RWM Alastair Griffiths 
-					Lodge Houston St. Johnstone No.242.
+					Edward John Richards Jnr. was a young man of 22 years when he joined the lodge as an entered apprentice on 21st September 1916. This was right in the 
+					middle of the First World War and our lodge records show his occupation to be a Corporal Bugler with the 3/9th HLI. He lived with his father at 400 Main 
+					Street Shettleston, modern day Shettleston Road
 				</p>
-				<div style="clear: both;">
-					<p>
-						The First Master of Lodge Eastmuir was John Adams of Larchgrove. He was a prominent businessman in the city of Glasgow and a member of both Lodge Trades 
-						House No.1241 and the Mother Lodge of Kilwinning. He donated the ground for the formation of Sandyhills Golf Club and was President of the Scottish Automobile Club.
-					</p>
-					<p>
-						Our lodge was Consecrated on 21st January 1914 by the Provincial Grand Master of Glasgow, Bro. A.A. Hagart Speirs. To commemorate the event, our first RWM Bro. 
-						John Adam presented a Car Clock to the Right Worshipful Provincial Grand Master in appreciation. The Foundation Stone of our building was laid on 20th October 1928 
-						once again by the Provincial Grand Master of Glasgow, Bro. A.A. Hagart Spiers of Elderslie who held the clock until his death.
-					</p>
-					<p>
-						Following the death of Hagart, the clock was inherited by his long serving butler Lindsay Maxwell, who was a member of Lodge Houston St Johnstone No. 242. On 
-						Lindsay’s death the clock passed  to his son James Maxwell (also a member of Lodge 242) who emigrated to the USA and took the clock with him.
-					</p>
-					<p>
-						Jimmy as he was known then around 1971 passed the clock on to his nephew William McMaster who was RWM of Lodge Houston St Johnstone No. 242 in 1959/1960. William’s 
-						son Kenny McMaster who is also a member of Lodge No.242 and now living in England, inherited the clock from his father and expressed a wish for it to be presented 
-						back to Lodge Eastmuir.
-					</p>
-					<p>
-						He suggested that this be done in memory of his family and his lodge, especially of his late father Past Master William. He requested that it would be fitting if this 
-						was done by the brethren of Lodge Houston St Johnstone No.242 to the brethren of Lodge Eastmuir No.1126.
-					</p>
-					<p>
-						On Thursday 4th May 2023, the clock completed it’s 109 year travels with the RWM Alastair Griffiths of Lodge Houston St Johnstone No. 242 visiting Lodge Eastmuir to 
-						present the clock back home to the RWM Stuart McManus.
-					</p>
-					<div style="text-align: center;">
-						<img src="images/Clock2.jpg" alt=""/>
-						<br/>Secretary Frank Richmond
-					</div>
+				<div style="text-align: center;">
+					<img src="images/EJR1.png" style="align-items: center; padding-bottom: 10px;"/>
+				</div>
+				<p>
+					His father was Edward James Richards who was a founder member of Lodge Eastmuir his mother lodge being Lodge Scotia No.178, one of our sponsor lodges. 
+					Edward James attended a meeting on 19th August 1913 in the Academy Tea Rooms Shettleston, where those present discussed forming a new lodge. The founding 
+					members fee was 30 shillings which he paid.
+				</p>
+				<p>
+					Our charter was granted in November 1913 and Edward James affiliated to Lodge Eastmuir as a founding member on 21st January 1914. He was installed as Second 
+					Steward and our records show him as being aged 42. There is a note in our minute book stating that he liked to be known by his middle name Jamie. His occupation 
+					is shown as Foreman Joiner but we believe he may have had a family interest in a chemist shop in Shettleston Road. Interestingly the meeting in Academy Tearooms 
+					we believe to be Houston the Baker and this was next door to Richards the Chemists!
+				</p>
+				<p>
+					Edward James attended most of the meetings in the first year of the lodge's existence and at the following year's installation on 17th December 1914 he was installed 
+					as Junior Deacon. The following year he was installed as Senior Deacon on 16th December 1915. He eventually moved to Amulree Street and became RWM of our lodge in 1920.
+				</p>
+				<p>
+					His son Edward John having been initiated on 21st September 1916 was passed on 15th December 1916 and raised 13 months later as a master mason on 17th January 1918. 
+					He was then posted to Flanders close to the France/Belgium border and was involved with some of the fiercest fighting experienced in the first world war.
+				</p>
+				<p>
+					The front lines had been stalemated for about 3 years when the German Spring Offensive began on 21st March 1918. The object was to have one great push to put the allies 
+					out of the war before the Americans could bring large numbers of fresh troops into the war. Following the Russian Revolution in 1917 and the withdrawal of  Russia 
+					from the war, the Germans were able to redeploy troops to the Western Front. The German commander General Ludendorff launched operation Michael in the Cambrai area and 
+					on the first day they fired three and a half million shells in just 5 hours.
+				</p>
+				<p>
+					The furthest point in the offensive was reached on 5th April. British losses were 160,000 of whom over 22,000 were killed. The German losses were roughly the same killed 
+					and wounded but fewer taken prisoner. They had advanced 40 miles at the furthest point and were within shelling distance of Paris.
+				</p>
+				<p>
+					It was then that what is now called the last German push to victory began with Operation Georgette launched on 7th April 1918 and was focussed in the Ypres area. 
+					The objective was to cut off the rail link to the channel ports which supplied the allied armies. The Germans had a huge advantage in terms of guns, men and aircraft.  
+					Three to one in many places. Many allied troops were still mixed up in the retreat and had been fighting with remnants of various formations when on the 11th April the 
+					command to stand and fight or loose the war was issued by Field Marshal Haig. He insisted that every post be held to the last man.
+				</p>
+				<p>
+					Young Edward John was involved in what eventually proved to be one of the most important turning points in the war. The British line eventually held but sadly he was 
+					posted as missing six days later on 17th April 1918. He was serving as a lance sergeant in the HLI and gave up his life just 3 months after becoming a master mason.  
+					As we now know the Germans had outran their supply lines allowing the allies with the assistance of thousands of recently arrived American Troops, to push on and 
+					eventually bring the war to an end.
+				</p>
+				<p>
+					Sadly there is no known grave for Edward John Richards Jnr. but his life is commemorated at Tyne Cot Cemetery near Ypres, along with thousands of others and on our 
+					WW1 war memorial plaque in the foyer of the lodge. Literally hundreds of people pass by this every week without giving it a glance. Perhaps the next time you are in 
+					the lodge you might take just a few moments to give thanks for the life of Edward John Richards and the thousands of other brave young men who gave up their lives 
+					serving our country.
+				</p>
+				<div style="text-align: center;">
+					--- LEST WE FORGET ---
+				</div>
+				<div style="text-align: center;">
+					<img src="images/EJR2.jpg" alt=""/>
+					<img src="images/EJR3.jpg" alt=""/>
 				</div>
 			</div>
 		</section>
