--- a/EdwardJohnRichards.html
+++ b/EdwardJohnRichards.html
@@ -146,6 +146,69 @@
 				.hover-shadow:hover {
 				  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 				}
+
+				* {box-sizing: border-box;}
+				body {font-family: Verdana, sans-serif;}
+				.mySlides {display: none;}
+				img {vertical-align: middle;}
+
+				/* Slideshow container */
+				.slideshow-container {
+				max-width: 1000px;
+				position: relative;
+				margin: auto;
+				}
+
+				/* Caption text */
+				.text {
+				color: #f2f2f2;
+				font-size: 15px;
+				padding: 8px 12px;
+				position: absolute;
+				bottom: 8px;
+				width: 100%;
+				text-align: center;
+				}
+
+				/* Number text (1/3 etc) */
+				.numbertext {
+				color: #f2f2f2;
+				font-size: 12px;
+				padding: 8px 12px;
+				position: absolute;
+				top: 0;
+				}
+
+				/* The dots/bullets/indicators */
+				.dot {
+				height: 15px;
+				width: 15px;
+				margin: 0 2px;
+				background-color: #bbb;
+				border-radius: 50%;
+				display: inline-block;
+				transition: background-color 0.6s ease;
+				}
+
+				.active {
+				background-color: #717171;
+				}
+
+				/* Fading animation */
+				.fade {
+				animation-name: fade;
+				animation-duration: 1.5s;
+				}
+
+				@keyframes fade {
+				from {opacity: .4} 
+				to {opacity: 1}
+				}
+
+				/* On smaller screens, decrease text size */
+				@media only screen and (max-width: 300px) {
+				.text {font-size: 11px}
+				}
 </style>
 
 <head>
@@ -244,13 +307,141 @@
 					the lodge you might take just a few moments to give thanks for the life of Edward John Richards and the thousands of other brave young men who gave up their lives 
 					serving our country.
 				</p>
-				<div style="text-align: center;">
+				<div style="text-align: center; padding-bottom: 10px;">
 					--- LEST WE FORGET ---
 				</div>
 				<div style="text-align: center;">
 					<img src="images/EJR2.jpg" alt=""/>
 					<img src="images/EJR3.jpg" alt=""/>
 				</div>
+				<table>
+					<tr>
+						<td style="vertical-align: middle; text-align: center; width: 20%;">
+							Visit to Tynecot Cemetery and Menin Gate, Ypres
+							<br/>21st March 2016
+							<br/>By PMs
+							<br/>Charles Hendry and Frank Richmond
+						</td>
+						<td>
+							<div class="slideshow-container">
+								<div class="mySlides fade">
+								  <div class="numbertext">1 / 16</div>
+								  <img src="images/EJRSlideshow/1.jpg" style="width: 50%;">
+								</div>					
+								<div class="mySlides fade">
+								  <div class="numbertext">2 / 16</div>
+								  <img src="images/EJRSlideshow/2.jpg" style="width: 50%;">
+								</div>					
+								<div class="mySlides fade">
+								  <div class="numbertext">3 / 16</div>
+								  <img src="images/EJRSlideshow/3.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">4 / 16</div>
+									<img src="images/EJRSlideshow/4.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">5 / 16</div>
+									<img src="images/EJRSlideshow/5.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">6 / 16</div>
+									<img src="images/EJRSlideshow/6.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">7 / 16</div>
+									<img src="images/EJRSlideshow/7.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">8 / 16</div>
+									<img src="images/EJRSlideshow/8.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">9 / 16</div>
+									<img src="images/EJRSlideshow/9.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">10 / 16</div>
+									<img src="images/EJRSlideshow/10.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">11 / 16</div>
+									<img src="images/EJRSlideshow/11.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">12 / 16</div>
+									<img src="images/EJRSlideshow/12.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">13 / 16</div>
+									<img src="images/EJRSlideshow/13.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">14 / 16</div>
+									<img src="images/EJRSlideshow/14.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">15 / 16</div>
+									<img src="images/EJRSlideshow/15.jpg" style="width: 50%;">
+								</div>			
+								<div class="mySlides fade">
+									<div class="numbertext">16 / 16</div>
+									<img src="images/EJRSlideshow/16.jpg" style="width: 50%;">
+								</div>					
+							</div>
+			
+							<script>
+								let slideIndex = 0;
+								showSlides();
+								
+								function showSlides() {
+								  let i;
+								  let slides = document.getElementsByClassName("mySlides");
+								  let dots = document.getElementsByClassName("dot");
+								  for (i = 0; i < slides.length; i++) {
+									slides[i].style.display = "none";  
+								  }
+								  slideIndex++;
+								  if (slideIndex > slides.length) {slideIndex = 1}    
+								  slides[slideIndex-1].style.display = "block";  
+								  setTimeout(showSlides, 4000); // Change image every 4 seconds
+								}
+							</script>
+						</td>
+					</tr>					
+					<tr>
+						<td colspan="2">
+							<p>
+								The Tyne Cot Memorial to the missing from the north-eastern boundary of Tyne Cot Cemetary, which is located 9 kilometres north east of Ieper town centre,
+								on the Tynecotstraat, a road leading from the Zonnebeekseweg (N332).
+							</p>
+							<p>
+								The names of those from United Kindom units are inscribed on Panels arranged by Regiment under their respective Ranks.
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" style="text-align: center;">
+							<strong>Edward John Richards</strong>
+							<br/>Rank: Lance Serjeant
+							<br/>Service No: 330905
+							<br/>Date of Death: 17/04/1918
+							<br/>Age: 24
+							<br/>Regiment/Service: Highland Light Infantry
+							<br/>
+							<br/>"A" Coy. 9th (Glasgow Hds.) Bn.
+							<br/>Panel Reference: Panel 131
+							<br/>Memorial: TYNE COT MEMORIAL
+							<br/>
+							<br/>Additional Information: Son of Edward J. and Jessie Smith Park Richards, of 391, Amulree St., Sandyhills, Tollcross, Glasgow.​
+						</td>
+					</tr>
+				</table>
+				<table>
+
+				</table>
+
+				
 			</div>
 		</section>
 
