Added Events screens

--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
 										<li><a href="EdwardJohnRichards.html">Edward John Richards</a></li>
 									</ul>
 								</li>
+								<li><a>Events</a>
+									<ul style="padding-left: 20px;">
+										<li><a href="SponsoredWalk.html">Sponsored Walk</a></li>
+										<li><a href="StevelyCup.html">Stevely Cup</a></li>
+										<li><a href="GrandXmasDraw.html">Grand Xmas Draw</a></li>
+									</ul>
+								</li>
 							</ul>
 						</div>
 					</li>
